# SFND_Camera

./: .gitignore  CMakeLists.txt  Makefile  vcpkg.json
Lesson 2 - Autonomous Vehicles and Computer Vision/The OpenCV Library/OpenCV_exercises/: CMakeLists.txt
Lesson 2 - Autonomous Vehicles and Computer Vision/The OpenCV Library/OpenCV_exercises/src/: change_pixels.cpp  create_matrix.cpp  load_image_1.cpp  load_image_2.cpp  load_image_3.cpp
Lesson 3 - Engineering a Collision Detection System/Estimating TTC with Camera/TTC_camera/: CMakeLists.txt
Lesson 3 - Engineering a Collision Detection System/Estimating TTC with Camera/TTC_camera/src/: compute_ttc_camera.cpp
Lesson 3 - Engineering a Collision Detection System/Estimating TTC with Lidar/TTC_lidar/: CMakeLists.txt
Lesson 3 - Engineering a Collision Detection System/Estimating TTC with Lidar/TTC_lidar/src/: compute_ttc_lidar.cpp
Lesson 4 - Tracking Image Features/Harris Corner Detection/cornerness_harris/: CMakeLists.txt
Lesson 4 - Tracking Image Features/Harris Corner Detection/cornerness_harris/src/: cornerness_harris.cpp
Lesson 4 - Tracking Image Features/Intensity Gradient and Filtering/gradient_filtering/: CMakeLists.txt
Lesson 4 - Tracking Image Features/Intensity Gradient and Filtering/gradient_filtering/src/: gaussian_smoothing.cpp  gradient_sobel.cpp  magnitude_sobel.cpp
Lesson 6 - Combining Camera and Lidar/Creating 3D-Objects/cluster_with_roi/: CMakeLists.txt
Lesson 6 - Combining Camera and Lidar/Creating 3D-Objects/cluster_with_roi/src/: cluster_with_roi.cpp
Lesson 6 - Combining Camera and Lidar/Lidar-to-Camera Point Projection/lidar_to_camera/: CMakeLists.txt
Lesson 6 - Combining Camera and Lidar/Lidar-to-Camera Point Projection/lidar_to_camera/src/: project_lidar_to_camera.cpp  show_lidar_top_view.cpp
Lesson 6 - Combining Camera and Lidar/Object Detection with YOLO/detect_objects/: CMakeLists.txt
Lesson 6 - Combining Camera and Lidar/Object Detection with YOLO/detect_objects/src/: detect_objects_2.cpp
